Fixed indent exactly with hspace

--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -156,7 +156,7 @@
 
 % Paragraphs
 \let\Oldparagraph\paragraph
-\renewcommand{\paragraph}{\Oldparagraph{} \noindent \phantom{'} \negthinspace}
+\renewcommand{\paragraph}{\Oldparagraph{} \noindent \hspace{5pt}}
 
 % Glossary
 % \usepackage[acronym, nomain, nopostdot, nonumberlist, nogroupskip, toc, automake=false]{glossaries}
