--- a/system_id/havok.tex
+++ b/system_id/havok.tex
@@ -1,10 +1,9 @@
 \section{Hankel alternative view of Koopman} 
 \label{sec:havok}
     
-    \murray{q = number of delays, from here up}
-    
     \paragraph
-    HAVOK is a data-driven, regression technique that provides a connection between DMD and Koopman operator theory \cite{Brunton2017a, Champion2019}. 
+    HAVOK is a data-driven, regression technique that provides a connection 
+    between DMD and Koopman operator theory \cite{Brunton2017a, Champion2019}. 
     We have adapted the standard HAVOK algorithm slightly to account for the effect of control and to extract a discrete, linear model that approximates the behaviour of a controlled dynamical system.
     In this section, a brief overview is provided for this implementation and expansion of \mbox{HAVOK}.
     % 
