--- a/system_id/plots/FFT_pos_step_subfigs.tex
+++ b/system_id/plots/FFT_pos_step_subfigs.tex
@@ -4,7 +4,7 @@
     \centering
     \input{system_id/plots/pos_step_single_pend.tex} % subfigure
     \input{system_id/plots/FFT_pos_step.tex} % subfigure
-    \caption{ Data from a North position step response used for cable length estimation 
+    \caption{ Data from a position step response used for cable length estimation 
     ($l =$~\SI{1}{\metre}, $m_p =$~\SI{0.3}{\kilo\gram}.).}
     \label{fig:FFT_pos_step_subfigs}  
 \end{figure}
