Added corrected error metric files

--- a/control_systems/control_systems.tex
+++ b/control_systems/control_systems.tex
@@ -3,7 +3,18 @@
 \chapter{Control systems}
 \label{chap:control_systems}
 
-\section{Cascaded PID with payload}
-\section{LQR}
-\section{MPC}
+    \section{Cascaded PID}
+
+        Control system design
+        Slower for less swing angles
+
+    \section{LQR}
+
+        Anton and Francois stuff
+
+    \section{MPC}
+
+        MATLAB
+        QP solver
+        C+ generation
 
