--- a/results/results.tex
+++ b/results/results.tex
@@ -3,4 +3,10 @@
 \chapter{Implementation and results}
 \label{chap:results}
 
+    \section{LQR}
+    \section{MPC}
+    \section{Dynamic payload}
+    \section{System identification with practical data}
+    \section{HIL}
+
 
