--- a/system_id/system_id.tex
+++ b/system_id/system_id.tex
@@ -13,7 +13,7 @@
 
     \paragraph
     This chapter discusses these system identification approaches and describes the differences between them.
-    For each approach, different estimation techniques are explained and applied to the quadrotor and payload system.
+    For each approach, specific estimation techniques are explained and applied to the quadrotor and payload system.
     The results of these techniques are then compared to each other.
 
     \input{system_id/white_black_box.tex}
