--- a/system_id/dmdc.tex
+++ b/system_id/dmdc.tex
@@ -2,15 +2,15 @@
 \label{sec:dmdc}
     
     \paragraph        
-    DMD is a linear regression technique that can be used to approximate a non-linear dynamical system \cite{Tu2014}.
+    DMD is a regression technique that can be used to approximate a non-linear dynamical system with a linear model \cite{Tu2014}.
     It uses temporal measurements of system outputs to reconstruct system dynamics without prior modelling assumptions.
     DMDc is an adaptation of DMD that also accounts for control inputs \cite{Proctor2016c}.
-    This section provides an overview of the specific implementation of DMDc used in this paper.        
-    Note that this implementation is a slight adaptation of DMDc, and includes time-delay-embedding of multiple observables. 
-    \cite{Korda2018b} and \cite{Arbabi2018} use time-delay-embedding in their DMD adaptions in similar ways.
+    This section provides an overview of the specific implementation of DMDc used in this work.        
+    Note that this implementation is an adaptation of DMDc, and includes time-delay-embedding of multiple observables. 
+    Enriching a DMD model with time-delay-embedding is a known technique and is also seen in other DMD adaptations \cite{Korda2018b, Arbabi2018}.
 
     \paragraph
-    DMD produces a linear, discrete state-space model of the system dynamics.
+    DMD produces a linear, discrete state-space model of system dynamics.
     Discrete measurements, $\bm{x}_k$, of the continuous time observable, $\bm{x}(t)$, are used, 
     where $\bm{x}_k = \bm{x}(k T_s)$, and $T_s$ is the sampling time of the model.    
     Delay-coordinates (i.e. $\bm{x}_{k-1}, \bm{x}_{k-2}$, etc.) are also included in the state-space model to
@@ -106,13 +106,14 @@
     POD modes??
     In many cases, the truncated form results in better models than the exact form when noisy measurements are used.
     This is because the effect of measurement noise is mostly captured by the truncated columns of $\bm{U}$ and $\bm{V}$.
-    By truncating these columns, the influence of noise in the regression problem is reduced. \murray{explain this better}
-    hence the SVD is used in the truncated form: 
+    By truncating these columns, the influence of noise in the regression problem is reduced. 
+    % \murray{explain this better ??}
+    Hence the SVD is used in the truncated form: 
     \begin{equation} \label{eq:tilde_svd}
         \bm{\Omega} \approx \Tilde{\bm{U}} \Tilde{\bm{\Sigma}} \Tilde{\bm{V}}^T ,
     \end{equation}
     where $\phantom{.} \Tilde{ } \phantom{.}$ represents rank-$p$ truncation.
-    \murray{maybe insert colour pictures showing matrices}        
+    % \murray{maybe insert colour pictures showing matrices ??}        
 
     \paragraph
     By combining (\ref{eq:tilde_svd}) with the over-constrained equality in (\ref{eq:G_Omega}), 
