--- a/system_id/param_estimation.tex
+++ b/system_id/param_estimation.tex
@@ -1,14 +1,14 @@
 \section{Parameter estimation} \label{sec:param_estimation}
 
     \paragraph
-    The purpose of parameter estimation is to determine unknown parameter values 
+    The purpose of parameter estimation is to determine unknown values 
     required by a predetermined, white-box model.
-    The identified model is used to design a LQR controller,
-    therefore the model needs to be a linear, continuos time, state-space form.
+    The identified model is used to design a LQR controller and
+    therefore needs to be in a linear, continuos-time, state-space form.
     This model was derived and linearised a priori in Section~\ref{sec:linear_model}.
     The unknown parameters in the model include the payload mass, $m_p$ and the cable length, $l$.
     Two separate methods are used to estimate each of these parameters.
-    These methods were also used by \cite{Erasmus2020} and \cite{Slabber2020} 
+    This method was used by \cite{Erasmus2020} and \cite{Slabber2020} 
     to design a LQR controller and implement swing damping control 
     of a quadrotor with an unknown suspended payload.
     
@@ -16,11 +16,11 @@
 
     \paragraph
     RLS is used by \cite{Erasmus2020} and \cite{Slabber2020} to estimate the payload mass.
-    Because it is assumed that the quadrotor mass is known, 
-    the payload mass can be estimated from the additional trust required during hover.
+    It is assumed that the quadrotor mass is known before flight, 
+    therefore the payload mass can be estimated from the additional trust required during hover.
     In both \cite{Erasmus2020} and \cite{Slabber2020} it is demonstrated 
-    that RLS is very accurate for the payload mass estimation of a system nearly identical to the one considered in this work.
-    To compare the white-box and black-box techniques with more clarity, 
+    that RLS is very accurate for a system nearly identical to the one considered in this work.
+    To compare other aspects of the white-box and black-box techniques with more clarity, 
     it will therefore be assumed that the method estimates $m_p$ with perfect accuracy.
     This isolates any inaccuracies in the white-box model to 
     either the a priori modelling or the cable length estimation.
@@ -30,7 +30,8 @@
     that the vehicle mass is known and remains unchanged.
     The method will clearly be inaccurate if a unknown mass is added to the quadrotor 
     in conjunction with the suspended payload.
-    In this case the mass estimation method will have to be completely redesigned.
+    Common practical examples of this include adding a camera to the vehicle or using a different battery for a different flight range.
+    In these cases the mass estimation method will have to be redesigned.
     This is an inherent problem of the white-box techniques.
     The parameter estimation methods are designed for specific modelling assumptions 
     and are not adaptable to different types of payload loadings.
@@ -41,37 +42,36 @@
 
     \paragraph
     The cable length is estimated from the measurement of the natural frequency of the swinging payload.
-    As described by
-    \cite{Bisgaard2008}, the natural frequency is given by:
+    As described by \cite{Bisgaard2008}, the natural frequency is given by:
     \begin{equation} \label{eq:nat_freq}
         \omega_n = \sqrt{ \frac{g}{l} \cdot \frac{m_q + m_p}{m_q}} .
     \end{equation}
     The cable length can clearly be calculated from (\ref{eq:nat_freq}) if the other parameters are known.
     The natural frequency is measured by performing a FFT on the payload swing angle response 
     after a position step by the quadrotor.
-    The dominant frequency identified by the FFT during free swing is an approximation 
+    The dominant frequency identified by the FFT during free swing is an approximate measurement
     of the natural frequency of the payload.
     Note that the measured frequency actually corresponds to the damped natural frequency, 
-    but it is assumed that the damping during free swing is negligible.
+    but it is assumed that damping during free swing is negligible.
     Therefore the damped natural frequency closely approximates the natural frequency.
-    This method is applied successfully by \cite{Erasmus2020} and \cite{Slabber2020} for cable length estimation.
+    % This method is applied successfully by \cite{Erasmus2020} and \cite{Slabber2020} for cable length estimation.
     
     \paragraph
     Figure~\ref{fig:pos_step_single_pend} shows the payload swing angle response 
     to a position step setpoint.
     The first few seconds of the step response are excluded from the FFT 
-    to minimise the effect of the transient response due to the quadrotor controllers 
-    in the natural frequency measurement.
-    \ref{fig:FFT_pos_step} shows the resulting single-sided amplitude spectrum of the FFT of this data.
+    to minimise the effect of the transient response and the quadrotor controllers 
+    on the natural frequency measurement.
+    Figure~\ref{fig:FFT_pos_step} shows the resulting single-sided amplitude spectrum of the FFT of this data.
     
     \paragraph
     The dominant frequency is clearly identified by the peak at \SI{0.520}{\radian/\second}.
     Since $m_q$, $m_p$ and $g$ are known, and $\omega_n$ has been measured, 
     $l$ can be determined from (\ref{eq:nat_freq}).
-    For this simulation the estimated length is \SI{0.953}{\metre}.
+    The estimated length for this simulation is \SI{0.953}{\metre}.
     The actual cable length is \SI{1}{\metre}, therefore this estimation has an error of 4.7\%.
-    As documented \cite{Erasmus2020} and \cite{Slabber2020}, this error is acceptable
-    and still results in effective control when implemented in a LQR.
+    As documented \cite{Erasmus2020} and \cite{Slabber2020}, an error of this magnitude is acceptably small
+    and still results in effective control with a LQR.
     It is also shown by \cite{Erasmus2020} and \cite{Slabber2020} that this estimation method 
     is effective for a range of different payloads.
 
