--- a/system_id/white_black_box.tex
+++ b/system_id/white_black_box.tex
@@ -2,11 +2,10 @@
 
     \paragraph
     Models determined from data-driven system identification methods are generally called black-box models.
-    This is because the user figuratively cannot ``see inside the box" 
-    to understand the inner-workings of the model.
     The user is only concerned with the inputs and output of the model
-    In contrast, models determined from a priori modelling are referred to as white-box models.
-    The user understand the physics and inner workings of these models, 
+    and does not determine mathematical relationships from theoretical deductions.
+    In contrast, white-box models are determined from a priori modelling.
+    The user understands the physics of white-box models 
     because the dynamics are manually programmed into the model by the user.
 
     \subsection{White-box techniques}
@@ -18,7 +17,7 @@
         For system identification techniques that use these models, 
         the mathematical relations between system parameters are predefined in the modelling phase.
         The system identification process is therefore reduced to parameter estimation 
-        which determines values for parameters used in die model.
+        which determines values for the parameters used in die model.
 
         \paragraph 
         This approach is used by \cite{Erasmus2020} and \cite{Slabber2020} for swing damping control of a quadrotor with an unknown suspended payload.
@@ -29,15 +28,16 @@
             \item The link is rigid.
             \item The link is attached to the CoM of the quadrotor.
         \end{itemize}
-        The only unknown parameters in the quadrotor and payload model is the payload mass and link length.
+        The only unknown parameters in the quadrotor and payload model is the payload mass and the link length.
         These parameters are first estimated and then inserted into the predefined, linearised model.
         This model is used by a LQR controller to damp swing angles while also controlling the vehicle.
 
         \paragraph 
-        The approach works well for systems with predictable dynamics, but it is not very adaptable.
+        The approach works well for systems with predictable dynamics, but is not very adaptable to systems with slightly different dynamics.
         The payload considered by \cite{Erasmus2020} and \cite{Slabber2020} is limited to a small rigid mass suspended from the quadrotor by a non-stretching cable. 
-        In this use case it was shown that a LQR controller successfully controls a quadrotor while minimising payload swing angles.
+        In this configuration it was shown that a LQR controller successfully controls a quadrotor while minimising payload swing angles.
         However, if a payload or cable is used that violates one of the modelling assumptions, the predefined model no longer accurately represent the system.
+        Many payloads which are considered for practical drone deliveries do not conform to these assumptions.
         Since the controller is dependent on this model, the mismatch between the model and actual dynamics may result in undesirable controller behaviour.
 
     \subsection{Black-box techniques}
@@ -51,40 +51,30 @@
         Black-box techniques determine the mathematical relationship between inputs and outputs of a system using information from measurement data only.
 
         \paragraph
-        Black-box models can be categorised as either non-linear or linear models.
+        Dynamical models can be categorised as either non-linear or linear models.
         Non-linear models are often more accurate than linear models because complex, real-world dynamics are better approximated by non-linear systems.
         The dynamics of a quadrotor and suspended payload are also non-linear.
-        Examples of black box models with quadrotors and payloads in literature ???
+        % Examples of black box models with quadrotors and payloads in literature ???
 
         \paragraph
         However, non-linear models are inherently more complex than linear models. 
-        Controllers that use non-linear models are usually more computationally complex than those with linear models.
-        Control archetictures for quadrotors used in practical applications are mostly implemented on onboard hardware.
-        Therefore there is value in low-complexity, linear models since these may be simple enough to execute on low cost hardware.
-        trade-off between accuracy and complexity.
+        Controllers based on non-linear models are usually more computationally complex than those with linear models.
+        The control architectures used for quadrotors in practical applications are mostly implemented on onboard hardware.
+        Therefore there is value in low-complexity, linear models because these may be simple enough to execute on low cost hardware.
+        % trade-off between accuracy and complexity.??
         Non-linear models may require control implementations that are too computationally expensive and may not be practically realisable on the available hardware on a quadrotor.
         
         \paragraph
-        DMDc and HAVOK are the two data-driven system identification methods investigated in this paper. 
-        These are linear regression techniques that produce a linear model to approximate non-linear dynamics.
-        Non-linear data-driven techniques like Neural Networks and SINDy \cite{Brunton2016} may produce models that are more accurate than linear techniques, 
+        DMDc and HAVOK are the two data-driven system identification methods investigated in this work. 
+        These are linear regression techniques that produce linear models to approximate non-linear dynamics.
+        Non-linear data-driven techniques like Neural Networks and SINDy \cite{Brunton2016a} may produce models that are more accurate than linear techniques, 
         but at the cost of greater computational complexity.
-        \murray{Name more techniques}
+        % \murray{Name more techniques ??}
         DMDc and HAVOK are less computationally complex and their models are suitable for linear MPC, which is significantly faster than non-linear MPC.
-        This is desirable for the quadrotor use case, where onboard computational power is limited.
+        This is desirable for a practical quadrotor implementation, where onboard computational power is limited.
+        These techniques and their implementations are explained in the sections below.
         
-        \paragraph
-        These techniques and their implementation are explained in the sections below.
-        Each technique is considered for use in a velocity controller in the North direction
+        % \paragraph
+        % Each technique is considered for use in a velocity controller in the North direction
 
-        \paragraph
-        % As discussed in \ref{sec:linear_model}, the payload has minimal effect on quadrotor attitude because it is attached near the CoM of the vehicle.
-        % Therefore the attitude states are excluded from the system identification model.
-        The model identified by DMDc or HAVOK will be used to design a longitudinal velocity controller.
-        As shown in \ref{fig:system_id_plant}, the plant considered for system identification includes the dynamics of the inner loop, attitude controllers.
-        The swing damping controllers which will utilise the identified model act only in the translational velocity loop.
-        Because of the large time-scale separation between the inner and outer loop controllers, 
-        the attitude states have a negilable effect on the plant dynamics seen by the velocity controller.
-        As discussed in Section~\ref{sec:linear_model}, the payload minimally effects the quadrotor attitude because it is attached near the CoM of the vehicle.
-        Therefore the attitude states are excluded from the system identification model.
-
+        % 
