Changed to NMAE plots and corrected axis sizes

--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -148,11 +148,11 @@
 \let\Oldsection\section
 \renewcommand{\section}{\FloatBarrier\Oldsection}
 
-\let\Oldsubsection\subsection
-\renewcommand{\subsection}{\FloatBarrier\Oldsubsection}
+% \let\Oldsubsection\subsection
+% \renewcommand{\subsection}{\FloatBarrier\Oldsubsection}
 
-\let\Oldsubsubsection\subsubsection
-\renewcommand{\subsubsection}{\FloatBarrier\Oldsubsubsection}
+% \let\Oldsubsubsection\subsubsection
+% \renewcommand{\subsubsection}{\FloatBarrier\Oldsubsubsection}
 
 % Paragraphs
 \let\Oldparagraph\paragraph
