--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -527,7 +527,7 @@
         it is obvious that the accuracy of a model is dependant 
         on the length of training data exposed to the system identification algorithm.
         The general relationship between length of training data and prediction error 
-        is illustrated in Figure~\ref{fig:system_parameters}.
+        is illustrated in Figure~\ref{fig:system_param_subfigs}.
         For very short lengths of training data the prediction error is large, 
         but as training length increases, the prediction error improves up to a point.
         After this point, the prediction error slowly worsens with increasing lengths of training data.
