--- a/system_id/plots/prediction_single_pend_white.tex
+++ b/system_id/plots/prediction_single_pend_white.tex
@@ -7,7 +7,7 @@
             x unit = \si{\second},
             y unit = \si{\radian},
             xmin = 0,   xmax = 20,
-            ymin = -0.2,  ymax = 0.2,
+            ymin = -0.2,  ymax = 0.1,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -49,6 +49,6 @@
     \end{tikzpicture} 
     
     \caption{White-box model predictions of a single pendulum for a North velocity step input
-    ($l =$~\SI{1}{\metre}, $T_{train} =$~various??.)}
+    ($l =$~\SI{1}{\metre}, $m_p =$~\SI{0.3}{\kilo\gram}.)}
     \label{fig:prediction_single_pend_white}
 \end{figure}
