--- a/system_id/dmdc.tex
+++ b/system_id/dmdc.tex
@@ -102,8 +102,8 @@
         \bm{\Omega} = \bm{U} \bm{\Sigma} \bm{V}^T
     \).
     Often, only the first $p$ columns of $\bm{U}$ and $\bm{V}$ are required for a good approximation of the dynamics \cite{Brunton2017a}.
-    Talk about Reduced Order Modelling??
-    POD modes??
+    % Talk about Reduced Order Modelling??
+    % POD modes??
     In many cases, the truncated form results in better models than the exact form when noisy measurements are used.
     This is because the effect of measurement noise is mostly captured by the truncated columns of $\bm{U}$ and $\bm{V}$.
     By truncating these columns, the influence of noise in the regression problem is reduced. 
