--- a/system_id/plots/MAE_diff.tex
+++ b/system_id/plots/MAE_diff.tex
@@ -3,7 +3,7 @@
     \begin{tikzpicture}
         \begin{axis}[            
             xlabel = Length of training data,
-            ylabel = MAE of time derivative of predictions,
+            ylabel = NMAE\textsubscript{mm} of time derivative of predictions,
             x unit = \si{\second},
             % y unit = \si{\second},
             xmin = 0,     xmax = 120,
@@ -26,12 +26,12 @@
         ]
 
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = T_train, y = MAE_mean, col sep = comma] 
+        table[x = T_train, y = NMAE_mean, col sep = comma] 
         {system_id/csv/NMAE_vs_Ntrain_SITL_x_vel_noise_longer_times_MAEdiff.csv_dmd_angle.csv};
         \addlegendentry{DMD}
         
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = T_train, y = MAE_mean, col sep = comma] 
+        table[x = T_train, y = NMAE_mean, col sep = comma] 
         {system_id/csv/NMAE_vs_Ntrain_SITL_x_vel_noise_longer_times_MAEdiff.csv_havok_angle.csv};
         \addlegendentry{HAVOK}
 
