--- a/system_id/plots/MAE_vs_q.tex
+++ b/system_id/plots/MAE_vs_q.tex
@@ -3,11 +3,11 @@
     \begin{tikzpicture}
         \begin{axis}[            
             xlabel = {Number of delay-coordinates, $q$},
-            ylabel = MAE,
+            ylabel = NMAE\textsubscript{mm},
             % x unit = \si{\second},
             % y unit = \si{\second},
             xmin = 2,     xmax = 40,
-            ymin = 0.085,  ymax = 0.135,
+            ymin = 0.032,  ymax = 0.065,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -26,13 +26,13 @@
         ]
 
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = q, y = MAE_mean, col sep = comma] 
-        {system_id/csv/MAE_vs_q_SITL_x_vel_noise_longer_times_q.csv_dmd_angle_Ttrain_60.csv};
+        table[x = q, y = NMAE_mean, col sep = comma] 
+        {system_id/csv/NMAE_vs_q_SITL_x_vel_noise_longer_times_q.csv_dmd_angle_Ttrain_60.csv};
         \addlegendentry{DMD}
         
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = q, y = MAE_mean, col sep = comma] 
-        {system_id/csv/MAE_vs_q_SITL_x_vel_noise_longer_times_q.csv_havok_angle_Ttrain_60.csv};
+        table[x = q, y = NMAE_mean, col sep = comma] 
+        {system_id/csv/NMAE_vs_q_SITL_x_vel_noise_longer_times_q.csv_havok_angle_Ttrain_60.csv};
         \addlegendentry{HAVOK}
 
         \end{axis}
