--- a/system_id/plots/different_state_vectors.tex
+++ b/system_id/plots/different_state_vectors.tex
@@ -3,11 +3,11 @@
     \begin{tikzpicture}
         \begin{axis}[            
             xlabel = Length of training data,
-            ylabel = MAE of velocity prediction,
+            ylabel = NMAE\textsubscript{mm} of velocity prediction,
             x unit = \si{\second},
             % y unit = \si{\second},
-            xmin = 0,     xmax = 100,
-            ymin = 0.13, ymax = 0.26,
+            xmin = 5,     xmax = 100,
+            ymin = 0.055, ymax = 0.1,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -26,19 +26,19 @@
         ]
          
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = T_train, y = MAE_1, col sep = comma] 
+        table[x = T_train, y = NMAE_1, col sep = comma] 
         {system_id/csv/NMAE_vs_Ntrain_SITL_x_vel_noise_l1_m0-2_state_vector.csv_havok_angle.csv};
         \addlegendentry{Using $\bm{\theta}$}
         
         \addplot+[mark = none, style = dashed, ultra thick] 
-        table[x = T_train, y = MAE_1, col sep = comma] 
+        table[x = T_train, y = NMAE_1, col sep = comma] 
         {system_id/csv/NMAE_vs_Ntrain_SITL_x_vel_noise_l1_m0-2_state_vector.csv_havok_angular_rate.csv};
         \addlegendentry{Using $\bm{\dot{\theta}}$}
 
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Prediction MAE for HAVOK models using either angle or angular rate measurements 
+    \caption{Prediction NMAE\textsubscript{mm} for HAVOK models using either angle or angular rate measurements 
     ($m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{1}{\meter}, $T_s =$~\SI{0.03}{\second}).}
     \label{fig:different_state_vectors}
 \end{figure}
