--- a/system_id/plots/havok_vs_dmd_noise.tex
+++ b/system_id/plots/havok_vs_dmd_noise.tex
@@ -3,11 +3,11 @@
     \begin{tikzpicture}
         \begin{axis}[            
             xlabel = Length of training data,
-            ylabel = MAE,
+            ylabel = NMAE\textsubscript{mm},
             x unit = \si{\second},
             % y unit = \si{\second},
-            xmin = 0,     xmax = 120,
-            ymin = 0.085,  ymax = 0.12,
+            xmin = 5,     xmax = 120,
+            ymin = 0.032,  ymax = 0.057,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -26,12 +26,12 @@
         ]
 
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = T_train, y = MAE_mean, col sep = comma] 
+        table[x = T_train, y = NMAE_mean, col sep = comma] 
         {system_id/csv/NMAE_vs_Ntrain_SITL_x_vel_noise_longer_times.csv_dmd_angle.csv};
         \addlegendentry{DMD}
 
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = T_train, y = MAE_mean, col sep = comma] 
+        table[x = T_train, y = NMAE_mean, col sep = comma] 
         {system_id/csv/NMAE_vs_Ntrain_SITL_x_vel_noise_longer_times.csv_havok_angle.csv};
         \addlegendentry{HAVOK}
 
