Updated title page

--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -145,8 +145,8 @@
 % Keep figure in section
 \usepackage{placeins}
 
-\let\Oldsection\section
-\renewcommand{\section}{\FloatBarrier\Oldsection}
+% \let\Oldsection\section
+% \renewcommand{\section}{\FloatBarrier\Oldsection}
 
 % \let\Oldsubsection\subsection
 % \renewcommand{\subsection}{\FloatBarrier\Oldsubsection}
@@ -168,7 +168,7 @@
 \selectlanguage{british}
 
 % Front matter
-% \input{frontmatter/masters_title_page}
+\input{frontmatter/masters_title_page}
 \pagenumbering{roman}
 % \input{frontmatter/acknowledgements}
 % \input{frontmatter/declaration}
