--- a/frontmatter/masters_title_page.tex
+++ b/frontmatter/masters_title_page.tex
@@ -8,14 +8,14 @@
 		
 		\WaterMark{UScrest-WM}
 		
-		~\vspace{4.5em}
+		~\vspace{-2em}
 		
-		{\sffamily \bfseries \huge Data-Driven System Identification etc \par}
+		{\sffamily \bfseries \huge Data-Driven System Identification and Model Predictive Control of a Quadrotor with an Unknown Suspended Payload \par}
 %		{\scshape \huge A Critical Analysis of Design Flaws in the Death Star \par}		
 		
-		\vspace{7em}
+		\vspace{4em}
 		
-		{\large {\Large  Luke Skywalker} \\ 99652154 \par}
+		{\large {\Large  Jakobus Murray Louw} \\ 19977476 \par}
 		
 		\vspace{8em}
 		
@@ -23,12 +23,12 @@
 		
 		\vfill
 		
-		{\large {Supervisor}: Dr O.\ W.\ Kenobi\\
+		{\large {Supervisor}: Dr H.\ W.\ Jordaan\\
 		Department of Electrical and Electronic Engineering \par}
 		
 		%\vfill
 		\vspace{10em}
 		
-		{\Large October 2099}
+		{\Large March 2022}
 	\end{center}
 \end{titlepage}
