changed figure placements from [h] to [htb]

--- a/frontmatter/declaration.tex
+++ b/frontmatter/declaration.tex
@@ -50,7 +50,7 @@
 %
 %\vspace{2.5cm}
 %
-%\begin{table}[h]
+%\begin{table}[htb]
 %\begin{tabular}{@{}p{2.5cm}p{5cm}}
 %    Signature: & \dotfill \\
 %    & \multicolumn{1}{c}{Obi-Wan Kenobi} \\
