Updated section headings of some chapters

--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -3,3 +3,8 @@
 \chapter{Introduction}
 \label{chap:introduction}
 
+\section{Background}
+\section{Project Definition and Objectives}
+\section{Thesis Outline}
+
+
