--- a/lit_study/lit_study.tex
+++ b/lit_study/lit_study.tex
@@ -3,4 +3,12 @@
 \chapter{Literature study}
 \label{chap:lit_study}
 
+\section{Unknown suspended payloads}
+\section{System Identification}
+\section{Control systems}
+\section{System Design}
+Blok diagram
+komponente
+
+
 
