--- a/results/results.tex
+++ b/results/results.tex
@@ -16,6 +16,9 @@
 
         \subsection{Length of training data}
             plot NMAE vs Ttrain
+            \input{results/plots/havok_vs_dmd_Ttrain_2mps.tex}
+            \input{results/plots/wind_Ttrain.tex}
+
             Difference between SITl and practical (same input steps)
             This is due to wind disturbance
             Plot wind vs less wind vs no wind
@@ -24,6 +27,10 @@
 
         \subsection{Hyperparameters}
             plot NMAE vs q
+            \input{results/plots/havok_vs_dmd_q_2mps.tex}
+
+            \input{results/plots/prac_singular_values.tex}
+            
             Difference between SITl and practical (same input steps)
             This is due to wind disturbance
             Plot wind vs less wind vs no wind
