--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -181,8 +181,9 @@
         This results in an error metric for each predicted variable, 
         but a single value is required per model 
         to rank the overall accuracy of different models.
-        Therefore the average of the NMAE\textsubscript{mm} of all state variables is used as the single value 
-        representing the overall accuracy of a model.
+        Therefore the average of the NMAE\textsubscript{mm} of all state variables
+        is used as the single value representing the overall accuracy of a model
+        and is denoted as $\overline{NMAE}_{mm}$.
         This is the final error metric used to evaluate the model predictions 
         in the sections to follow.
 
