--- a/results/plots/wind_Ttrain.tex
+++ b/results/plots/wind_Ttrain.tex
@@ -3,11 +3,11 @@
     \begin{tikzpicture}
         \begin{axis}[            
             xlabel = Length of training data,
-            ylabel = NMAE\textsubscript{mm},
+            ylabel = $\overline{NMAE}_{mm}$ \phantom{~},
             x unit = \si{\second},
-            % y unit = \si{\second},
+            y unit = \%,
             xmin = 5,     xmax = 120,
-            ymin = 0.032,  ymax = 0.057,
+            ymin = 3.2,  ymax = 15,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -26,19 +26,19 @@
         ]
 
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = T_train, y = NMAE_mean, col sep = comma] 
-        {system_id/csv/NMAE_vs_Ntrain_SITL_x_vel_no_noise_longer_times.csv_havok_angle.csv};
-        \addlegendentry{Without noise}
+        table[x = T_train, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
+        {results/csv/NMAE_vs_Ntrain_Prac_2021-08-12_03_manual_x_vel_steps_2mps.csv_dmd_angle.csv};
+        \addlegendentry{2 m/s winds}
 
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = T_train, y = NMAE_mean, col sep = comma] 
-        {system_id/csv/NMAE_vs_Ntrain_SITL_x_vel_noise_longer_times.csv_havok_angle.csv};
-        \addlegendentry{With noise}
+        table[x = T_train, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
+        {results/csv/NMAE_vs_Ntrain_Prac_2021-08-12_02_manual_x_vel_steps_4mps.csv_dmd_angle.csv};
+        \addlegendentry{4 m/s winds}
 
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{HAVOK prediction errors for different lengths of training data with and without noise 
-    ($m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}).}
-    \label{fig:noise_vs_no_noise}
+    \caption{Effect of wind on DMD prediction errors for different lengths of practical training data
+    ($m =$~\SI{0.206}{\kilo\gram}, $l =$~\SI{1}{\meter}, $T_s =$~\SI{0.03}{\second}).}
+    \label{fig:wind_Ttrain}
 \end{figure}
